--- a/ui/index.njk
+++ b/ui/index.njk
@@ -1,39 +1,57 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="utf-8">
   <title>{{ index_page.Title }}</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Rubik&family=Roboto+Slab&display=swap" rel="stylesheet"> 
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.6.16/dist/css/uikit.min.css" />
+  <link rel="stylesheet" href="/css/main.css" />
 </head>
 <body>
-  <h1>{{ index_page.Title }}</h1>
-
-  <section>
-    {# NB: do not split/indent the following line and other MD blocks #}
-    {% markdown %}{{ index_page.Lead | safe }}{% endmarkdown %}
+  <section class="uk-section uk-section-primary uk-flex uk-flex-middle uk-text-center section-full">
+    <div class="uk-container">
+      <h1 class="uk-margin-large-bottom">{{ index_page.Title }}</h1>
+      <div class="uk-text-lead">
+        {# NB: do not split/indent the following line and other MD blocks #}
+        {% markdown %}{{ index_page.Lead | safe }}{% endmarkdown %}
+      </div>
+    </div>
   </section>
 
-  <section>
-    {% markdown %}{{ index_page.Main | safe }}{% endmarkdown %}
+  <section class="uk-section uk-section-secondary">
+    <div class="uk-container">
+      {% markdown %}{{ index_page.Main | safe }}{% endmarkdown %}
+    </div>
   </section>
 
-  <section>
-    <ul>
-    {% for feature in index_page.Features %}
-      <li>
-        <h3>{{ feature.Title }}</h3>
-        <section>
-          {% markdown %}{{ feature.Description | safe }}{% endmarkdown %}
-        </section>
-      </li>
-    {% endfor %}
-    </ul>
+  <section class="uk-section uk-section-muted">
+    <div class="uk-container">
+      <h2 class="">{{ index_page.FeaturesTitle }}</h1>
+      <div class="uk-grid uk-grid-match uk-child-width-1-1 uk-child-width-1-2@s uk-child-width-1-3@m uk-text-center uk-flex-center">
+        {% for feature in index_page.Features %}
+          <div class="uk-card uk-card-body">
+            <h3 class="uk-card-title">{{ feature.Title }}</h3>
+            <div>
+              {% markdown %}{{ feature.Description | safe }}{% endmarkdown %}
+            </div>
+          </div>
+        {% endfor %}
+      </div>
+    </div>
   </section>
 
-  <section>
-    {% markdown %}{{ index_page.Main2 | safe }}{% endmarkdown %}
+  <section class="uk-section uk-section-default">
+    <div class="uk-container">
+      {% markdown %}{{ index_page.Main2 | safe }}{% endmarkdown %}
+    </div>
   </section>
 
-  <footer>
-    &copy; 2021 Евгений Миротин и др. авторы.
+  <footer class="uk-section uk-section-muted uk-section-small">
+    <div class="uk-container uk-text-small uk-text-muted">
+      {% markdown %}{{ index_page.Footer | safe }}{% endmarkdown %}
+    </div>
   </footer>
 
   <script>
