--- a/ui/index.njk
+++ b/ui/index.njk
@@ -5,9 +5,14 @@
   <title>{{ index_page.Title }}</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Rubik&family=Roboto+Slab&display=swap" rel="stylesheet"> 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.6.16/dist/css/uikit.min.css" />
-  <link rel="stylesheet" href="/css/main.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Rubik&family=Roboto+Slab&display=swap" rel="stylesheet"> 
+  <link rel="stylesheet" href="/static/main.css" />
+
+  <link rel="icon" href="/static/favicon.ico"><!-- 32×32 -->
+  <link rel="icon" href="/static/favicon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="/static/apple-touch-icon.png"><!-- 180×180 -->
+  <link rel="manifest" href="/static/manifest.webmanifest">
 </head>
 <body>
   <section class="uk-section uk-section-primary uk-flex uk-flex-middle uk-text-center section-full">
