--- a/ui/index.njk
+++ b/ui/index.njk
@@ -16,9 +16,9 @@
     <meta property="og:image" content="{{ env.HOST }}/static/favicon-512.png" />
   {% endif %}
 
-  <link rel="icon" href="/static/favicon.ico"><!-- 32×32 -->
+  <link rel="icon" href="/static/favicon.ico">
   <link rel="icon" href="/static/favicon.svg" type="image/svg+xml">
-  <link rel="apple-touch-icon" href="/static/apple-touch-icon.png"><!-- 180×180 -->
+  <link rel="apple-touch-icon" href="/static/apple-touch-icon.png">
   <link rel="manifest" href="/static/manifest.webmanifest">
 </head>
 <body>
