--- a/ui/index.njk
+++ b/ui/index.njk
@@ -5,6 +5,7 @@
   <title>{{ index_page.Title }}</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <meta name="theme-color" content="#1e87f0">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.6.16/dist/css/uikit.min.css" />
   <link href="https://fonts.googleapis.com/css2?family=Rubik&family=Roboto+Slab&display=swap" rel="stylesheet"> 
@@ -71,6 +72,15 @@
 
   <script>
     (function(){
+      {% if env.NODE_ENV === 'production' %}
+      if ('serviceWorker' in navigator) {
+        // Use the window load event to keep the page load performant
+        window.addEventListener('load', () => {
+          navigator.serviceWorker.register('/sw.js');
+        });
+      }
+      {% endif %}
+
       [...document.querySelectorAll('a')].forEach(a => {
         if ((a.getAttribute('href') || '').match(/^https?:\/\//)) {
           a.setAttribute('target', '_blank');
