--- a/ui/static/main.css
+++ b/ui/static/main.css
@@ -22,3 +22,31 @@ h6 {
   min-height: -webkit-fill-available;
   min-height: fill-available;
 }
+
+.section-lead {
+  position: relative;
+}
+
+@keyframes jump {
+  0% {
+    transform: translateY(-10px);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
+.scroll-hint {
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  left: calc(50% - 15px);
+  top: calc(100% - 40px);
+  animation: jump 0.75s infinite alternate;
+  animation-timing-function: ease-in-out;
+}
+
+.scroll-hint svg {
+  width: 100%;
+  height: 100%;
+}
