--- a/ui/static/main.css
+++ b/ui/static/main.css
@@ -42,11 +42,14 @@ h6 {
   height: 30px;
   left: calc(50% - 15px);
   top: calc(100% - 40px);
-  animation: jump 0.75s infinite alternate;
-  animation-timing-function: ease-in-out;
+  animation: jump 0.75s infinite alternate ease-in-out;
 }
 
 .scroll-hint svg {
   width: 100%;
   height: 100%;
+}
+
+.uk-section-secondary a {
+  text-decoration: underline;
 }
