--- a/ui/index.njk
+++ b/ui/index.njk
@@ -1,32 +1,8 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-  <meta charset="utf-8">
-  <title>{{ index_page.Title }}</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="{{ index_page.Lead }}">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <meta name="theme-color" content="#1e87f0">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.6.16/dist/css/uikit.min.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Rubik&family=Roboto+Slab&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/static/main.css" />
-
-  <meta property="og:title" content="{{ index_page.Title }}" />
-  <meta property="og:description" content="{{ index_page.Lead }}" />
-  <meta property="og:locale" content="ru_RU" />
-  <meta property="og:type" content="website" />
-  {% if env.HOST %}
-    <meta property="og:url" content="{{ env.HOST }}" />
-    <meta property="og:image" content="{{ env.HOST }}/static/favicon-512.png" />
-  {% endif %}
-
-  <link rel="icon" href="/static/favicon.ico">
-  <link rel="icon" href="/static/favicon.svg" type="image/svg+xml">
-  <link rel="apple-touch-icon" href="/static/apple-touch-icon.png">
-  <link rel="manifest" href="/static/manifest.webmanifest">
-</head>
-<body>
+---
+layout: layout
+pageDescription: index_page.Lead
+---
+<article class="page-content">
   <section class="uk-section uk-section-primary uk-flex uk-flex-middle uk-text-center section-full section-lead">
     <div class="uk-container">
       <h1 class="uk-margin-large-bottom">{{ index_page.Title }}</h1>
@@ -46,7 +22,7 @@
 
   <section class="uk-section uk-section-muted">
     <div class="uk-container">
-      <h2 class="">{{ index_page.FeaturesTitle }}</h1>
+      <h2>{{ index_page.FeaturesTitle }}</h1>
       <div class="uk-grid uk-grid-match uk-child-width-1-1 uk-child-width-1-2@s uk-child-width-1-3@m uk-text-center uk-flex-center">
         {% for feature in index_page.Features %}
           <div class="uk-card uk-card-body">
@@ -63,33 +39,22 @@
   <section class="uk-section uk-section-default">
     <div class="uk-container">
       {% markdown %}{{ index_page.Main2 | safe }}{% endmarkdown %}
+
+      {% if news.length %}
+        <h2>Новости</h1>
+        <ul class="uk-list">
+          {% for newsItem in news | sort(true, false, 'Date') | take(3) %}
+            <li class="uk-margin-bottom">
+              <h4>
+                <span class="uk-text-muted">{{ newsItem.Date | date }}:</span>
+                <a href="/news/{{ newsItem.Date }}-{{ newsItem.Title | slug }}/">{{ newsItem.Title }}</a>
+              </h4>
+              {% if newsItem.Lead %}<p>{{ newsItem.Lead }}</p>{% endif %}
+            </li>
+          {% endfor %}
+        </ul>
+        <a class="uk-button uk-button-text" href="/news">Все новости</a>
+      {% endif %}
     </div>
   </section>
-
-  <footer class="uk-section uk-section-muted uk-section-small">
-    <div class="uk-container uk-text-small uk-text-muted">
-      {% markdown %}{{ index_page.Footer | safe }}{% endmarkdown %}
-    </div>
-  </footer>
-
-  <script>
-    (function(){
-      {% if env.NODE_ENV === 'production' %}
-      if ('serviceWorker' in navigator) {
-        // Use the window load event to keep the page load performant
-        window.addEventListener('load', () => {
-          navigator.serviceWorker.register('/sw.js');
-        });
-      }
-      {% endif %}
-
-      [...document.querySelectorAll('a')].forEach(a => {
-        if ((a.getAttribute('href') || '').match(/^https?:\/\//)) {
-          a.setAttribute('target', '_blank');
-          a.setAttribute('rel', 'noopener');
-        }
-      });
-    }())
-  </script>
-</body>
-</html>
+</article>
