--- a/ui/static/main.css
+++ b/ui/static/main.css
@@ -4,8 +4,18 @@ html {
 }
 
 body {
-  height: 100%;
+  min-height: 100%;
+  display: grid;
+  grid-template-rows: auto;
   font-size: 120%;
+}
+
+body.elements-2 {
+  grid-template-rows: 1fr auto;
+}
+
+body.elements-3 {
+  grid-template-rows: auto 1fr auto;
 }
 
 h1,
@@ -52,4 +62,9 @@ h6 {
 
 .uk-section-secondary a {
   text-decoration: underline;
+}
+
+.site-logo svg {
+  height: auto;
+  width: 1.2em;
 }
