Contact Us page

--- a/ui/_includes/content.njk
+++ b/ui/_includes/content.njk
@@ -8,8 +8,11 @@ bodyElements: 3
       <div class="uk-navbar-left">
         <a class="uk-navbar-item uk-logo site-logo" href="/">{% include "../static/logo.svg" %}</a>
         <ul class="uk-navbar-nav">
-          <li class="uk-active">
+          <li>
             <a href="/news">Новости</a>
+          </li>
+          <li>
+            <a href="/contact">Обратная связь</a>
           </li>
         </ul>
       </div>
