--- a/ui/contact.njk
+++ b/ui/contact.njk
@@ -17,7 +17,7 @@ eleventyComputed:
       и мы постараемся ответить как можно быстрее.
     </p>
 
-    <form action="https://submit-form.com/29rLotZk" class="uk-form-stacked">
+    <form action="https://submit-form.com/29rLotZk" class="uk-form-stacked" method="post">
       <div class="uk-grid uk-child-width-1-1 uk-child-width-1-2@s">
         <div class="uk-margin-bottom">
           <label class="uk-form-label" for="name">Ваше имя<em>*</em>:</label>
