--- a/ui/_includes/content.njk
+++ b/ui/_includes/content.njk
@@ -6,8 +6,10 @@ bodyElements: 3
   <nav class="uk-navbar-container">
     <div class="uk-container">
       <div class="uk-navbar-left">
-        <a class="uk-navbar-item uk-logo site-logo" href="/">{% include "../static/logo.svg" %}</a>
         <ul class="uk-navbar-nav">
+          <li>
+            <a class="site-logo" href="/">{% include "../static/logo.svg" %}&nbsp;Домой</a>
+          </li>
           <li>
             <a href="/news">Новости</a>
           </li>
