Read more for news

--- a/ui/index.njk
+++ b/ui/index.njk
@@ -49,7 +49,14 @@ pageDescription: index_page.Lead
                 <span class="uk-text-muted">{{ newsItem.Date | date }}:</span>
                 <a href="/news/{{ newsItem.Date }}-{{ newsItem.Title | slug }}/">{{ newsItem.Title }}</a>
               </h4>
-              {% if newsItem.Lead %}<p>{{ newsItem.Lead }}</p>{% endif %}
+              {% if newsItem.Lead or newsItem.Body %}
+                <p>
+                  {{ newsItem.Lead }}
+                  {% if newsItem.Body %}
+                    <a class="uk-link-text uk-text-small" href="/news/{{ newsItem.Date }}-{{ newsItem.Title | slug }}/">Читать дальше</a>
+                  {% endif %}
+                </p>
+              {% endif %}
             </li>
           {% endfor %}
         </ul>
