--- a/ui/_includes/layout.njk
+++ b/ui/_includes/layout.njk
@@ -9,7 +9,7 @@ bodyElements: 2
   <meta charset="utf-8">
   <title>{%if pageTitle %}{{ pageTitle + ' | ' }}{% endif %}{{ index_page.Title }}</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  {% if pageDescription %}<meta name="pageDescription" content="{{ pageDescription }}">{% endif %}
+  {% if pageDescription %}<meta name="description" content="{{ pageDescription }}">{% endif %}
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <meta name="theme-color" content="#1e87f0">
   <link rel="preconnect" href="https://fonts.gstatic.com">
