--- a/ui/index.njk
+++ b/ui/index.njk
@@ -1,6 +1,7 @@
 ---
 layout: layout
-pageDescription: index_page.Lead
+eleventyComputed:
+  pageDescription: "{{ index_page.Lead }}"
 ---
 <article class="page-content">
   <section class="uk-section uk-section-primary uk-flex uk-flex-middle uk-text-center section-full section-lead">
