--- a/ui/_includes/content.njk
+++ b/ui/_includes/content.njk
@@ -16,6 +16,9 @@ bodyElements: 3
           <li>
             <a href="/contact">Обратная связь</a>
           </li>
+          {#<li>
+            <a href="/vision">Наше видение</a>
+          </li>#}
         </ul>
       </div>
     </div>
