--- a/ui/vision.njk
+++ b/ui/vision.njk
@@ -14,7 +14,7 @@ eleventyComputed:
 
       <div class="uk-grid uk-child-width-1-1 uk-child-width-1-2@m">
         <ul class="uk-list">
-          {% for s in manifest.Signature | sort(false, true, 'Name') %}
+          {% for s in manifest.Signature | sortNames('Name') %}
             <li>
               {% if s.URL %}
                 <a href="{{ s.URL }}">{{ s.Name }}</a>
