--- a/ui/index.njk
+++ b/ui/index.njk
@@ -4,7 +4,27 @@ eleventyComputed:
   pageDescription: "{{ index_page.Lead }}"
 ---
 <article class="page-content">
-  <section class="uk-section uk-section-primary uk-flex uk-flex-middle uk-text-center section-full section-lead">
+  <section class="uk-section uk-section-primary uk-flex uk-flex-middle uk-text-center section-full uk-position-relative">
+
+    <div class="uk-position-top">
+      <nav class="uk-navbar-container uk-navbar-transparent">
+        <div class="uk-container">
+          <div class="uk-navbar-left">
+            <ul class="uk-navbar-nav">
+              <li>
+                <span class="uk-navbar-item site-logo">{% include "./static/logo.svg" %}</span>
+              </li>
+              {% for item in menu %}
+                <li>
+                  <a href="{{ item.link }}">{{ item.title }}</a>
+                </li>
+              {% endfor %}
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </div>
+
     <div class="uk-container">
       <h1 class="uk-margin-large-bottom">{{ index_page.Title }}</h1>
       <div class="uk-text-lead">
