--- a/ui/_includes/content.njk
+++ b/ui/_includes/content.njk
@@ -10,15 +10,11 @@ bodyElements: 3
           <li>
             <a class="site-logo" href="/">{% include "../static/logo.svg" %}&nbsp;Домой</a>
           </li>
-          <li>
-            <a href="/news">Новости</a>
-          </li>
-          <li>
-            <a href="/contact">Обратная связь</a>
-          </li>
-          {#<li>
-            <a href="/vision">Наше видение</a>
-          </li>#}
+          {% for item in menu %}
+            <li>
+              <a href="{{ item.link }}">{{ item.title }}</a>
+            </li>
+          {% endfor %}
         </ul>
       </div>
     </div>
