--- a/ui/index.njk
+++ b/ui/index.njk
@@ -12,7 +12,7 @@ eleventyComputed:
           <div class="uk-navbar-left">
             <ul class="uk-navbar-nav">
               <li>
-                <span class="uk-navbar-item site-logo">{% include "./static/logo.svg" %}</span>
+                <span class="uk-navbar-item site-logo index-logo">{% include "./static/logo.svg" %}</span>
               </li>
               {% for item in menu %}
                 <li>
