--- a/ui/index.njk
+++ b/ui/index.njk
@@ -4,6 +4,12 @@ eleventyComputed:
   pageDescription: "{{ index_page.Lead }}"
 ---
 <article class="page-content">
+  <section class="uk-section uk-section-secondary section-full">
+    <div class="uk-container">
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/BdAxPokc6XM" title="Трансляция Учредительного Собрания" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+  </section>
+
   <section class="uk-section uk-section-primary uk-flex uk-flex-middle uk-text-center section-full section-first uk-position-relative">
 
     <div class="uk-position-top">
