--- a/ui/_includes/layout.njk
+++ b/ui/_includes/layout.njk
@@ -78,6 +78,23 @@ bodyElements: 2
           a.parentNode.classList.add('uk-active');
         }
       });
+
+      [...document.querySelectorAll('iframe[src*="youtube.com"]')].forEach(fitVid => {
+        const width = fitVid.getAttribute("width");
+        const height = fitVid.getAttribute("height");
+        const aspectRatio = height / width;
+        const parentDiv = fitVid.parentNode;
+
+        const div = document.createElement("div");
+        div.className = "fitVids-wrapper";
+        div.style.paddingBottom = aspectRatio * 100 + "%";
+        parentDiv.insertBefore(div, fitVid);
+        fitVid.remove();
+        div.appendChild(fitVid);
+
+        fitVid.removeAttribute("height");
+        fitVid.removeAttribute("width");
+      })
     }())
   </script>
 </body>
