--- a/ui/static/main.css
+++ b/ui/static/main.css
@@ -38,6 +38,19 @@ h6 {
   padding-top: 70px;
 }
 
+.fitVids-wrapper {
+  position: relative;
+  padding-bottom: 56.25%;
+  height: 0;
+}
+.fitVids-wrapper iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
 @keyframes jump {
   0% {
     transform: translateY(-10px);
