properly highlight the statute link

--- a/ui/_includes/content.njk
+++ b/ui/_includes/content.njk
@@ -12,7 +12,7 @@ bodyElements: 3
           </li>
           {% for item in menu %}
             <li>
-              <a href="{{ item.link }}">{{ item.title }}</a>
+              <a href="{{ item.link }}" data-fuzzy="{{ item.fuzzy }}">{{ item.title }}</a>
             </li>
           {% endfor %}
         </ul>
