--- a/ui/assembly.njk
+++ b/ui/assembly.njk
@@ -12,5 +12,13 @@ eleventyComputed:
         <iframe width="560" height="315" src="https://www.youtube.com/embed/BdAxPokc6XM" title="Трансляция Учредительного Собрания" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
     </div>
+
+    <div class="uk-container uk-text-center">
+      <h1>Закрытие Учредительного Собрания</h1>
+        <div class="fitVids-wrapperOuter">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/DV3id4CikUU" title="Закрытие Учредительного Собрания" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+      </div>
+    </div>
   </section>
 </article>
