--- a/ui/index.njk
+++ b/ui/index.njk
@@ -28,6 +28,12 @@ eleventyComputed:
     </div>
   </section>
 
+  <section class="uk-section uk-section-default">
+    <div class="uk-container">
+      {% include "_join.njk" %}
+    </div>
+  </section>
+
   <section class="uk-section uk-section-muted">
     <div class="uk-container">
       <h2>{{ index_page.FeaturesTitle }}</h2>
