--- a/ui/_includes/layout.njk
+++ b/ui/_includes/layout.njk
@@ -13,7 +13,7 @@ bodyElements: 2
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <meta name="theme-color" content="#1e87f0">
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.6.17/dist/css/uikit.min.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.7.0/dist/css/uikit.min.css" />
   <link href="https://fonts.googleapis.com/css2?family=Rubik&family=Roboto+Slab&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/static/main.css" />
 
@@ -52,6 +52,8 @@ bodyElements: 2
       </div>
     </div>
   </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/uikit@3.7.0/dist/js/uikit.min.js"></script>
 
   <script>
     (function(){
