--- a/ui/_includes/content.njk
+++ b/ui/_includes/content.njk
@@ -2,23 +2,11 @@
 layout: layout
 bodyElements: 3
 ---
+
+{% import "top-menu.njk" as topMenu %}
+
 <header>
-  <nav class="uk-navbar-container">
-    <div class="uk-container">
-      <div class="uk-navbar-left">
-        <ul class="uk-navbar-nav">
-          <li>
-            <a class="site-logo" href="/">{% include "../static/logo.svg" %}&nbsp;Домой</a>
-          </li>
-          {% for item in menu %}
-            <li>
-              <a href="{{ item.link }}" data-fuzzy="{{ item.fuzzy }}">{{ item.title }}</a>
-            </li>
-          {% endfor %}
-        </ul>
-      </div>
-    </div>
-  </nav>
+  {{ topMenu.topMenu(false, menu) }}
 </header>
 
 <article class="page-content">
