social links in the side and footer menu

--- a/ui/_includes/content.njk
+++ b/ui/_includes/content.njk
@@ -6,7 +6,7 @@ bodyElements: 3
 {% import "top-menu.njk" as topMenu %}
 
 <header>
-  {{ topMenu.topMenu(false, menu) }}
+  {{ topMenu.topMenu(false, menu, externalMenu) }}
 </header>
 
 <article class="page-content">
