Rename subscription checkbox

--- a/ui/_join.njk
+++ b/ui/_join.njk
@@ -39,7 +39,7 @@
 
   <div class="uk-margin-bottom">
     <label>
-      <input class="uk-checkbox" type="checkbox" name="join" value="Да">
+      <input class="uk-checkbox" type="checkbox" name="subscribe" value="Да">
       &nbsp;Также хочу получать рассылку новостей МАИИ
     </label>
   </div>
