move youtube embed to no-cookie domain

--- a/ui/assembly.njk
+++ b/ui/assembly.njk
@@ -9,14 +9,14 @@ eleventyComputed:
     <div class="uk-container uk-text-center">
       <h1>Запись трансляции Учредительного Собрания</h1>
       <div class="fitVids-wrapperOuter">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/BdAxPokc6XM" title="Трансляция Учредительного Собрания" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/BdAxPokc6XM" title="Трансляция Учредительного Собрания" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
     </div>
 
     <div class="uk-container uk-text-center">
       <h1>Закрытие Учредительного Собрания</h1>
         <div class="fitVids-wrapperOuter">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/DV3id4CikUU" title="Закрытие Учредительного Собрания" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/DV3id4CikUU" title="Закрытие Учредительного Собрания" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
       </div>
     </div>
