--- a/ui/assembly.njk
+++ b/ui/assembly.njk
@@ -7,14 +7,14 @@ eleventyComputed:
 <article class="page-content">
   <section class="uk-section uk-section-secondary">
     <div class="uk-container uk-text-center">
-      <h1>Запись трансляции Учредительного Собрания</h1>
+      <h1>Запись трансляции Учредительного собрания</h1>
       <div class="fitVids-wrapperOuter">
         <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/BdAxPokc6XM" title="Трансляция Учредительного Собрания" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
     </div>
 
     <div class="uk-container uk-text-center">
-      <h1>Закрытие Учредительного Собрания</h1>
+      <h1>Закрытие Учредительного собрания</h1>
         <div class="fitVids-wrapperOuter">
           <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/DV3id4CikUU" title="Закрытие Учредительного Собрания" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
