--- a/ui/_join.njk
+++ b/ui/_join.njk
@@ -5,16 +5,16 @@
 <form action="https://submit-form.com/BEtGO0Ol" class="uk-form-stacked join-form" method="post">
   <div class="uk-grid uk-child-width-1-1">
     <div class="uk-margin-bottom uk-width-1-2@s">
-      <label class="uk-form-label" for="name">Полное имя кириллицей<em>*</em>:</label>
+      <label class="uk-form-label" for="name">Имя кириллицей<em>*</em>:</label>
       <div class="uk-form-controls">
-        <input class="uk-input" type="text" id="name" name="name" placeholder="Фамилия Имя Отчество" required />
+        <input class="uk-input" type="text" id="name" name="name" placeholder="Имя Фамилия" required />
       </div>
     </div>
 
     <div class="uk-margin-bottom uk-width-1-2@s">
       <label class="uk-form-label" for="name-lat">Имя латиницей (как в документе)<em>*</em>:</label>
       <div class="uk-form-controls">
-        <input class="uk-input" type="text" id="name-lat" name="name-lat" placeholder="First Name Last Name" required />
+        <input class="uk-input" type="text" id="name-lat" name="name-lat" placeholder="First_Name Last_Name" required />
       </div>
     </div>
 
@@ -32,21 +32,21 @@
       &nbsp;Хочу вступить в Международную ассоциацию интеллектуальных игр<em>*</em>
     </label>
     <p>
-      Вступая в МАИИ, вы принимаете нашу
-      <a href="/p/policy" target="_blank" rel="noopener noreferrer">Политику обработки персональных данных</a>.
+      Ваши персональные данные обрабатываются в соответствии с
+      <a href="/p/policy" target="_blank" rel="noopener noreferrer">политикой обработки персональных данных МАИИ</a>.
     </p>
   </div>
 
   <div class="uk-margin-bottom">
     <label>
       <input class="uk-checkbox" type="checkbox" name="subscribe" value="Да">
-      &nbsp;Также хочу получать рассылку новостей МАИИ
+      &nbsp;Также хочу получать рассылку новостей МАИИ.
     </label>
   </div>
 
   <div class="h-captcha uk-margin-bottom" data-sitekey="178905a5-244e-4656-bb5f-adc9a5d40b9d"></div>
 
-  <p>После отправки формы вы получите письмо с просьбой подтвердить заявку и адрес электронной почты.</p>
+  <p>После отправки формы вы получите письмо с просьбой подтвердить заявку.</p>
 
   <button class="uk-button uk-button-primary uk-button-large" type="submit">Отправить</button>
 </form>
