--- a/ui/_join.njk
+++ b/ui/_join.njk
@@ -32,7 +32,7 @@
       &nbsp;Хочу вступить в Международную ассоциацию интеллектуальных игр<em>*</em>
     </label>
     <p>
-      Ваши персональные данные обрабатываются в соответствии с
+      Ваши персональные данные обрабатываются в соответствии с&nbsp;
       <a href="/p/policy" target="_blank" rel="noopener noreferrer">политикой обработки персональных данных МАИИ</a>.
     </p>
   </div>
