fix the privacy policy link

--- a/ui/_join.njk
+++ b/ui/_join.njk
@@ -33,7 +33,7 @@
     </label>
     <p>
       Ваши персональные данные обрабатываются в соответствии с&nbsp;
-      <a href="/p/policy" target="_blank" rel="noopener noreferrer">политикой обработки персональных данных МАИИ</a>.
+      <a href="/p/privacy" target="_blank" rel="noopener noreferrer">политикой обработки персональных данных МАИИ</a>.
     </p>
   </div>
 
