--- a/ui/contact.njk
+++ b/ui/contact.njk
@@ -18,7 +18,7 @@ eleventyComputed:
     </p>
 
     <form action="https://submit-form.com/29rLotZk" class="uk-form-stacked" method="post">
-      <input type="hidden" name="_redirect" value="/join_confirmation"/>
+      <input type="hidden" name="_redirect" value="https://www.chgk.info/join_confirmation"/>
       <input type="hidden" name="_append" value="false" />
       <div class="uk-grid uk-child-width-1-1 uk-child-width-1-2@s">
         <div class="uk-margin-bottom">
