change params for correct form

--- a/ui/_join.njk
+++ b/ui/_join.njk
@@ -3,6 +3,9 @@
 <h1 id="join">Вступить в организацию</h1>
 
 <form action="https://submit-form.com/BEtGO0Ol" class="uk-form-stacked join-form" method="post">
+  <input type="hidden" name="_redirect" value="/join_confirmation"/>
+  <input type="hidden" name="_append" value="false" />
+
   <div class="uk-grid uk-child-width-1-1">
     <div class="uk-margin-bottom uk-width-1-2@s">
       <label class="uk-form-label" for="name">Имя кириллицей<em>*</em>:</label>
